--- a/app/src/main/res/layout/activity_add_flora.xml
+++ b/app/src/main/res/layout/activity_add_flora.xml
@@ -48,7 +48,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraNombre"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +72,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraFamilia"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +96,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraIdentificacion"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +120,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraAltitud"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +144,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraHabitat"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -173,7 +168,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraFitosociologia"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -198,7 +192,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraBiotipo"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -223,7 +216,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraBiologiaReproductiva"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -239,16 +231,15 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilFloraFloración"
+                android:id="@+id/tilFloraFloracion"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="10dp"
-                android:hint="@string/hintFloraFloración"
+                android:hint="@string/hintFloraFloracion"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -273,7 +264,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraFructificacion"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -298,7 +288,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraExpresionSexual"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -323,7 +312,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraPolinizacion"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -348,7 +336,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraDispersion"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -373,7 +360,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraNumCromosomatico"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -398,7 +384,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraReproduccionAsexual"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -423,7 +408,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraDistribucion"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -448,7 +432,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraBiologia"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -473,7 +456,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraDemografia"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -498,7 +480,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraAmenazas"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -523,7 +504,6 @@
                 android:layout_marginEnd="10dp"
                 android:hint="@string/hintFloraMedidasPropuestas"
                 android:textColorHint="@color/primary_dark_color"
-                app:boxStrokeWidth="3dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -533,9 +513,9 @@
                     android:id="@+id/etFloraMedidasPropuestas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:textSize="18sp"
-                    tools:ignore="TextContrastCheck"
-                    android:textColor="@color/black" />
+                    tools:ignore="TextContrastCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
@@ -544,13 +524,18 @@
     <Button
         android:id="@+id/btCancelarAñadir"
         style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/btCancelarAñadir"
+        android:text="@string/btCancelar"
         android:textColor="@color/primary_color"
+        app:icon="@drawable/ic_baseline_cancel_24"
+        app:iconTint="@color/primary_color"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btAñadir"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:strokeColor="@color/primary_color"
         app:strokeWidth="2dp"
@@ -558,14 +543,19 @@
 
     <Button
         android:id="@+id/btAñadir"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/btAñadir"
         android:textColor="@color/white"
+        app:icon="@drawable/ic_baseline_add_24"
+        app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btCancelarAñadir"
         tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
