--- a/app/src/main/res/layout/activity_edit_flora.xml
+++ b/app/src/main/res/layout/activity_edit_flora.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/ivFlora"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="395dp"
+        android:layout_height="188dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -44,7 +44,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -574,6 +574,20 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvMoreInfo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:text="@string/tvMoreInfo"
+                android:textColor="@color/primary_dark_color"
+                android:textSize="18sp"
+                app:drawableLeftCompat="@drawable/ic_baseline_info_24"
+                app:drawableTint="@color/primary_dark_color" />
 
         </LinearLayout>
 
