--- a/app/src/main/res/layout/activity_edit_imagen.xml
+++ b/app/src/main/res/layout/activity_edit_imagen.xml
@@ -56,7 +56,7 @@
         tools:ignore="TextContrastCheck">
 
         <AutoCompleteTextView
-            android:id="@+id/actvIdFlora"
+            android:id="@+id/actvIdFlors"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hintIdFlora"
@@ -111,7 +111,6 @@
         android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="@color/primary_dark_color"
-        app:layout_constraintBottom_toTopOf="@+id/btCancelarAñadir"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,42 +127,78 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btCancelarAñadir"
+        android:id="@+id/btBorrar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/btBorrar"
+        android:textColor="@color/white"
+        android:visibility="visible"
+        app:icon="@drawable/ic_baseline_delete_24"
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btEditar"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TextContrastCheck" />
+
+    <Button
+        android:id="@+id/btEditar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/btEditar"
+        android:textColor="@color/white"
+        android:visibility="visible"
+        app:icon="@drawable/ic_baseline_edit_24"
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btBorrar"
+        tools:ignore="TextContrastCheck" />
+
+    <Button
+        android:id="@+id/btCancelarEdicion"
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="12dp"
         android:text="@string/btCancelar"
         android:textColor="@color/primary_color"
+        android:visibility="gone"
         app:icon="@drawable/ic_baseline_cancel_24"
         app:iconTint="@color/primary_color"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btAñadir"
+        app:layout_constraintEnd_toStartOf="@+id/btGuardarEdicion"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilDescripcionImagen"
         app:strokeColor="@color/primary_color"
         app:strokeWidth="2dp"
         tools:ignore="TextContrastCheck" />
 
     <Button
-        android:id="@+id/btAñadir"
+        android:id="@+id/btGuardarEdicion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/btAñadir"
+        android:layout_marginBottom="12dp"
+        android:text="@string/btGuardar"
         android:textColor="@color/white"
-        app:icon="@drawable/ic_baseline_add_24"
+        android:visibility="gone"
+        app:icon="@drawable/ic_baseline_save_24"
         app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btCancelarAñadir"
-        app:layout_constraintTop_toBottomOf="@+id/tilDescripcionImagen"
+        app:layout_constraintStart_toEndOf="@+id/btCancelarEdicion"
         tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
