--- a/app/src/main/res/layout/activity_add_imagen.xml
+++ b/app/src/main/res/layout/activity_add_imagen.xml
@@ -31,8 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvUploadImagenTitle"
-        app:srcCompat="@drawable/ic_baseline_cloud_upload_24"
-        app:tint="@color/primary_dark_color" />
+        app:srcCompat="@drawable/ic_baseline_cloud_upload_24"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilIdFlora"
